# BetsAPI

./: alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 0e99a74bb4b2_added_cascade_delete.py  189f25354647_create_allbets_table.py  193415b3b0c3_bet_type_and_bet_on.py  3d4cdae99331_bet_type_and_bet_on.py  4a430017270f_bet_type_and_bet_on.py  5e52f215ddb0_added_parsed_bet_model.py  6b862fdc5632_fix_bug_with_linking.py  6e7dd269eee1_arb_table_added.py  7615afcfbec4_база_данных_новая_версия.py  79161a648c59_added_sport_and_league_to_bets.py  7b8bbbe25297_link_allbets_and_accs.py  858a05836351_add_name_to_bets.py  88ffaeea65cc_betmodel_update_del_arbs_table.py  9302ebb2541f_fix_bug_with_linking.py  954317337259_arb_fixed_bug.py  aa8c47193de8_added_stake_to_parsed_bets.py  b0762dbbe8a7_update_parsedbetsmodel.py  b6458f8c63e3_models_v_1_0.py  b97d91f209d7_arb_table_added.py  d9ec39b1f7fa_test.py  da114949824c_value_added.py  fd49732a17e1_manual_initial_baseline.py  fd4f16583fcf_value_added.py
src/: logger.py  main.py
src/api/allbets/: model.py  router.py  schemas.py
src/api/bets/: model.py  router.py  schemas.py  utils.py
src/db/: database.py  querries.py
